Make Transform Tool support Shape and other external layers

BUG:320954